voltando aos trabalhos

--- a/Reverse Engineering/readings/0x05.md
+++ b/Reverse Engineering/readings/0x05.md
@@ -541,8 +541,16 @@ O diretório de importação é um array de IMAGE_IMPORT_DESCRIPTORs, um para ca
 O IMAGE_IMPORT_DESCRIPTOR é uma estrutura com os seguintes membros:
 
 
+- *OriginalFirstThunk*: Um RVA (32 bits) apontando para um array terminado em 0 de RVAs para os IMAGE_THUNK_DATAs, cada um descrevendo uma função importada. O array nunca muda.
 
-CONTINUE....
+- *TimeDateStamp*: Um carimbo de 32 bits com vários propósitos. Imagine que o timestamp seja 0 e deixe os casos avançados para mais tarde.
+
+- *ForwarderChain*: O índice de 32 bits do primeiro remetente (forwarder) na lista de funções importadas. Remetentes também é assunto avançado: para principiantes, setar todos os bits em 1.
+
+- *Name*: Um RVA de 32 bits para o nome da DLL (uma string ASCII terminada em 0).
+
+- *FirstThunk*: Um RVA de 32 bits para um array de RVAs terminado em 0 para os IMAGE_THUNK_DATAs, cada um descrevendo uma função importada. O array faz parte da tabela de endereços de importação e será mudado.
+
 
 - Recursos
 - Remanejamentos
