--- a/DevOps/Hardware_sets/Printers/Impressora-zebra/Zebra/TLP2844.md
+++ b/DevOps/Hardware_sets/Printers/Impressora-zebra/Zebra/TLP2844.md
@@ -1,3 +1,3 @@
-- Instalar o Driver no 
+- Instalar o Driver em :
 
-``..``
+https://www.zebra.com/br/pt/support-downloads/printers/desktop/tlp-2844.html
